--- a/src/index.css
+++ b/src/index.css
@@ -276,3 +276,30 @@ h4 {
     transform: rotateX(360deg);
  }
 }
+
+.box{
+  animation: animName 10s linear infinite;
+}
+
+.text-animation{
+  animation: animNameOpp 10s linear infinite;
+}
+
+@keyframes animName {
+  0%{
+     transform: rotate(0deg);
+    }
+ 100%{
+     transform: rotate(360deg);
+    }
+ }
+ 
+ @keyframes animNameOpp {
+  0%{
+     transform: rotate(360deg);
+    }
+ 100%{
+     transform: rotate(0deg);
+    }
+ }
+ 
